--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,9 @@
-{% include header.html %}
+{% include head.html %}
+
+<body>
+
+  <div class="container">
+    {% include header.html %}
+  </div>
+
+</body>
