--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
-<header>
-  <h3>
+<header class="masthead">
+  <h3 class="masthead-title">
     <a href="{{ site.baseurl }}/">{{ site.title }}</a>
-    <small>{{ site.tagline }}</small>
+    <small class="masthead-subtitle">{{ site.tagline }}</small>
   </h3>
 </header>
