Add sliding menu

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
-<header class="masthead">
+<header class="masthead menu-button">
   <h3 class="masthead-title">
     <a href="{{ site.baseurl }}/">{{ site.title }}</a>
     <small class="masthead-subtitle">{{ site.tagline }}</small>
+    {% include menu.html %}
   </h3>
-  <!--{% include menu.html %}-->
 </header>
