--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,3 +1,5 @@
-<nav class="menu">
-  <p>testing</p>
-</nav>
+<div class="menu-content">
+  <a href="#">About</a>
+  <a href="#">Writing</a>
+  <a href="#">Contact</a>
+</div>
