--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,12 +5,8 @@
   <div class="container">
     {% include header.html %}
 
-    <!--{% include menu.html %}-->
-
-    <div class="post">
-      <div class="posts">
-        {{ content }}
-      </div>
+    <div class="post-container">
+      {{ content }}
     </div>
 
     {% include footer.html %}
