--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="masthead menu-button">
+<header class="masthead">
   <h3 class="masthead-title">
     <a href="{{ site.baseurl }}/">{{ site.title }}</a>
     <small class="masthead-subtitle">{{ site.tagline }}</small>
