--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,10 +1,14 @@
-<div class="menu-content">
-  <a href="{{ site.baseurl }}/about.html">About</a>
-  <a href="#">Writing</a>
-  <a href="#">Contact</a>
-  <a href="https://twitter.com/paululele"><i class="fa fa-twitter" aria-hidden="true" style="padding:10px;" target="_blank"></i></a>
-  <a href="https://www.facebook.com/Le.Paul.94"><i class="fa fa-facebook" aria-hidden="true" style="padding:10px;" target="_blank"></i></a>
-  <a href="https://instagram.com/paululele"><i class="fa fa-instagram" aria-hidden="true" style="padding:10px;" target="_blank"></i></a>
-  <a href="https://linkedin.com/in/lenpaul"><i class="fa fa-linkedin" aria-hidden="true" style="padding:10px;" target="_blank"></i></a>
-  <a href="mailto:l.nguyen.paul@gmail.com"><i class="fa fa-envelope" aria-hidden="true" style="padding:10px;" target="_blank"></i></a>
+<div class="menu">
+  <div class="menu-content">
+    <a href="{{ site.baseurl }}/about.html">About</a>
+    <a href="#">Writing</a>
+    <a href="#">Contact</a>
+  </div>
+  <div class="menu-icons">
+    <a href="https://twitter.com/paululele"><i class="fa fa-twitter" aria-hidden="true" target="_blank"></i></a>
+    <a href="https://www.facebook.com/Le.Paul.94"><i class="fa fa-facebook" aria-hidden="true" target="_blank"></i></a>
+    <a href="https://instagram.com/paululele"><i class="fa fa-instagram" aria-hidden="true" target="_blank"></i></a>
+    <a href="https://linkedin.com/in/lenpaul"><i class="fa fa-linkedin" aria-hidden="true" target="_blank"></i></a>
+    <a href="mailto:l.nguyen.paul@gmail.com"><i class="fa fa-envelope" aria-hidden="true" target="_blank"></i></a>
+  </div>
 </div>
