--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,8 @@
     {% endif %}
   </title>
 
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/css/main.css">
   <link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/css/syntax.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
