--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -4,7 +4,7 @@
     <a href="{{ site.baseurl }}/writing.html">Writing</a>
     <a href="{{ site.baseurl }}/contacts.html">Contact</a>
   </div>
-  <div class="menu-icons">
+  <div class="social-icons">
     <a href="https://twitter.com/{{ site.author.twitter }}"><i class="fa fa-twitter" aria-hidden="true" target="_blank"></i></a>
     <a href="https://www.facebook.com/{{ site.author.facebook }}"><i class="fa fa-facebook" aria-hidden="true" target="_blank"></i></a>
     <a href="https://instagram.com/{{ site.author.instagram }}"><i class="fa fa-instagram" aria-hidden="true" target="_blank"></i></a>
