Fix GitHub URL issue

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,8 +1,8 @@
 <div class="menu">
   <div class="menu-content">
-    <a href="{{ site.baseurl }}/about.html">About</a>
-    <a href="{{ site.baseurl }}/writing.html">Writing</a>
-    <a href="{{ site.baseurl }}/contacts.html">Contact</a>
+    <a href="{{ site.github.url }}/about.html">About</a>
+    <a href="{{ site.github.url }}/writing.html">Writing</a>
+    <a href="{{ site.github.url }}/contacts.html">Contact</a>
   </div>
   <div class="social-icons">
     <a href="https://twitter.com/{{ site.author.twitter }}"><i class="fa fa-twitter" aria-hidden="true" target="_blank"></i></a>
