--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,5 +4,5 @@
   <a href="https://instagram.com/paululele"><i class="fa fa-instagram" aria-hidden="true" target="_blank"></i></a>
   <a href="https://linkedin.com/in/lenpaul"><i class="fa fa-linkedin" aria-hidden="true" target="_blank"></i></a>
   <a href="mailto:l.nguyen.paul@gmail.com"><i class="fa fa-envelope" aria-hidden="true" target="_blank"></i></a>
-  <div class="post-date"><a href="{{ site.baseurl }}/about.html">{{ site.title }} | {{ site.tagline }} by {{ site.author.name }}</a></div>
+  <div class="post-date"><a href="{{ site.github.url }}/about.html">{{ site.title }} | {{ site.tagline }} by {{ site.author.name }}</a></div>
 </footer>
