--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,8 @@
 body {
   font-family: "PT Serif", Georgia, "Times New Roman", serif;
   font-size: 18px;
-  color: pink;/*rgba(0,0,0,.8);/*#666;*/
-  line-height: 1.75rem;
+  color: rgba(0,0,0,.8);/*#666;*/
+  line-height: 1.5rem;
 }
 
 @media (max-width: 30em) {
