Change link underline to border

--- a/css/main.css
+++ b/css/main.css
@@ -29,8 +29,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 a {
-  text-decoration: underline;
-  /*border-bottom: 1px solid black;*/
+  text-decoration: none;
+  border-bottom: 1px solid black;
   color: #333;/*#FF333E;*/
   -o-transition:.5s;
     -ms-transition:.5s;
