Change body font color

--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ h1, h2, h3, h4, h5, h6 {
 a {
   text-decoration: none;
   border-bottom: 1px solid black;
-  color: #333;/*#FF333E;*/
+  color: #3A3A3A;/*#333;/*#FF333E;*/
   -o-transition:.5s;
     -ms-transition:.5s;
     -moz-transition:.5s;
