--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 body {
   font-family: "PT Serif", Georgia, "Times New Roman", serif;
   font-size: 18px;
-  color: #3A3A3A;/*rgba(0,0,0,.8);/*#666;*/
+  color: #515151;/*#3A3A3A;/*rgba(0,0,0,.8);/*#666;*/
   line-height: 1.75rem;
 }
 
