Fix related post link bug

--- a/_includes/related-posts.html
+++ b/_includes/related-posts.html
@@ -8,7 +8,7 @@
         {% else %}
           <li>
             <h3>
-              <a href="{{ site.url }}{{ site.baseurl }}{{ mypost.url }}">
+              <a href="{{ site.github.url }}{{ mypost.url }}">
                 {{ mypost.title }}
                 <!--<img src="{{ site.url }}{{ site.baseurl }}/images/{{ mypost.image.teaser }}">-->
                 <!--<small>{{ mypost.date | date: "%B %-d, %Y" }}</small>-->
