--- a/css/main.css
+++ b/css/main.css
@@ -196,8 +196,8 @@ blockquote p {
 .pagination-button {
   color: #999;
   border: 1px solid #e0e0e0;
-  padding: 15px 8vw;
-  display: block;
+  padding: 15px 45px;
+  display: inline-block;
   font-size: 16px;
   font-weight: bold;
 }
