--- a/css/main.css
+++ b/css/main.css
@@ -196,7 +196,7 @@ blockquote p {
 .pagination-button {
   color: #999;
   border: 1px solid #e0e0e0;
-  padding: 15px 60px;
+  padding: 15px 7vw;
   display: inline-block;
   font-size: 16px;
   font-weight: bold;
