--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,5 @@
 <footer class="footer">
+  <a href="https://github.com/lenpaul"><i class="fa fa-github" aria-hidden="true" target="_blank"></i></a>
   <a href="https://twitter.com/paululele"><i class="fa fa-twitter" aria-hidden="true" target="_blank"></i></a>
   <a href="https://www.facebook.com/Le.Paul.94"><i class="fa fa-facebook" aria-hidden="true" target="_blank"></i></a>
   <a href="https://instagram.com/paululele"><i class="fa fa-instagram" aria-hidden="true" target="_blank"></i></a>
