--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -5,6 +5,7 @@
     <a href="{{ site.github.url }}/contacts.html">Contact</a>
   </div>
   <div class="social-icons">
+    <a href="https://github.com/{{ site.author.github }}"><i class="fa fa-github" aria-hidden="true" target="_blank"></i></a>
     <a href="https://twitter.com/{{ site.author.twitter }}"><i class="fa fa-twitter" aria-hidden="true" target="_blank"></i></a>
     <a href="https://www.facebook.com/{{ site.author.facebook }}"><i class="fa fa-facebook" aria-hidden="true" target="_blank"></i></a>
     <a href="https://instagram.com/{{ site.author.instagram }}"><i class="fa fa-instagram" aria-hidden="true" target="_blank"></i></a>
