--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer class="footer">
-  <a href="https://github.com/lenpaul"><i class="fa fa-github" aria-hidden="true" target="_blank"></i></a>
-  <a href="https://twitter.com/paululele"><i class="fa fa-twitter" aria-hidden="true" target="_blank"></i></a>
-  <a href="https://instagram.com/paululele"><i class="fa fa-instagram" aria-hidden="true" target="_blank"></i></a>
-  <a href="https://linkedin.com/in/lenpaul"><i class="fa fa-linkedin" aria-hidden="true" target="_blank"></i></a>
-  <a href="mailto:l.nguyen.paul@gmail.com"><i class="fa fa-envelope" aria-hidden="true" target="_blank"></i></a>
+  <a href="https://github.com/{{site.author.github}}"><i class="fa fa-github" aria-hidden="true" target="_blank"></i></a>
+  <a href="https://twitter.com/{{site.author.twitter}}"><i class="fa fa-twitter" aria-hidden="true" target="_blank"></i></a>
+  <a href="https://instagram.com/{{site.author.instagram}}"><i class="fa fa-instagram" aria-hidden="true" target="_blank"></i></a>
+  <a href="https://linkedin.com/in/{{site.author.linkedin}}"><i class="fa fa-linkedin" aria-hidden="true" target="_blank"></i></a>
+  <a href="mailto:{{site.author.email}}"><i class="fa fa-envelope" aria-hidden="true" target="_blank"></i></a>
   <div class="post-date"><a href="{{ site.github.url }}/about.html">{{ site.title }} | {{ site.tagline }} by {{ site.author.name }}</a></div>
 </footer>
