--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="masthead">
   <h3 class="masthead-title">
-    <a href="{{ site.github.url }}/">{{ site.title }}</a>
+    <a href="{{ site.url }}/">{{ site.title }}</a>
     <small class="masthead-subtitle">{{ site.tagline }}</small>
     {% include menu.html %}
   </h3>
