--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,11 @@
-<!doctype html>
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 {% include head.html %}
-
 <body>
-
-  <div class="container">
-    {% include header.html %}
-
-    <div class="post-container">
-      {{ content }}
-    </div>
+  <div class="content-container">
+    {{ content }}
 
     {% include footer.html %}
-
   </div>
-
 </body>
 </html>
