--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,9 @@
 
 <body>
 
+<script type="text/javascript" 
+src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+
   <div class="container">
     {% include header.html %}
 
