--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -13,7 +13,7 @@ No comments?
 <p>
   <h3>Post a comment:</h3>
   <form method="POST" action="https://staticmanlagr.herokuapp.com/v3/entry/github/samarulmeu/samarulmeu.github.io/master/comments">
-  <input name="options[redirect]" type="hidden" value="https://samarulmeu.github.io">
+  <input name="options[redirect]" type="hidden" value="https://samarulmeu.github.io/mylagrange/">
     <input name="options[slug]" type="hidden" value="{{ page.slug }}">
       <div>
       <legend>Name</legend>
