--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -8,6 +8,40 @@
 <!-- https://github.com/eduardoboucas/popcorn/blob/gh-pages/_includes/reviews.html -->
 No comments?
 
+{% if site.repository and site.staticman.branch %}
+
+{% if site.data.comments[page.slug] %}
+
+  <p>
+    <h3>
+    {% if site.data.comments[page.slug].size > 1 %}
+      {{ site.data.comments[page.slug] | size }}
+    {% endif %}
+    Comments:
+    </h3>
+  </p>
+
+  <hr>
+
+  {% assign comments = site.data.comments[page.slug] | sort %}
+
+  <p>
+    {% for comment in comments %}
+     {% assign email = comment[1].email %}
+     {% assign name = comment[1].name %}
+     {% assign url = comment[1].url %}
+     {% assign date = comment[1].date %}
+     {% assign message = comment[1].message %}
+     {% include comment.html index=forloop.index email=email name=name url=url date=date message=message %}
+              
+      <br>
+      <legend><strong>{{ comment[1].name }}</strong></legend>
+      <em>{{ comment[1].date | date: "%B %d, %Y" }}</em>
+      <p>{{ comment[1].message | markdownify }}</p>
+      <hr>
+    {% endfor %}
+  </p>
+{% endif %}
 
 <!-- Comment form -->
 <p>
