--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -8,17 +8,8 @@
 <!-- https://github.com/eduardoboucas/popcorn/blob/gh-pages/_includes/reviews.html -->
 No comments?
 
+SOOOOO
 
-{% if site.data.comments[page.slug] %}
-
-  <p>
-    <h3>
-    {% if site.data.comments[page.slug].size > 1 %}
-      {{ site.data.comments[page.slug] | size }}
-    {% endif %}
-    Comments:
-    </h3>
-  </p>
 
   <hr>
 
@@ -40,8 +31,8 @@ No comments?
       <hr>
     {% endfor %}
   </p>
-{% endif %}
 
+  
 
 <!-- Comment form -->
 <p>
