--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -20,7 +20,8 @@ something
       <h2 class="comments__heading heading-2">Comments</h2>
 {% assign comments = site.data.comments[page.slug] %}
   
-nothing
+<h1>nothing</h1>
+
       {% for comment in comments %}
         <article >
            <h3 >{{ comment.name }}</h3>
