--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -18,7 +18,7 @@ something
 {% endif %}
 
       <h2 class="comments__heading heading-2">Comments</h2>
-{% assign comments = site.data.comments[page.slug] %}
+{% assign comments = site.data.comments[page.slug] | sort %}
   
 <h1>nothing</h1>
 
