--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -13,9 +13,8 @@ SOOOOO
 
   <hr>
 
-{% if site.repository and site.staticman.branch %}
 something
-
+<h3>{% if site.data.comments[page.slug].size > 1 %}{{ site.data.comments[page.slug] | size | append: ' ' }}{% endif %}Comments</h3>
 
       <h2 class="comments__heading heading-2">Comments</h2>
 {% assign comments = site.data.comments[page.slug] | sort %}
@@ -34,7 +33,7 @@ something
                 </article>
       {% endfor %}
 
-{% endif %}
+
   
 
 <!-- Comment form -->
