--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -30,7 +30,7 @@ SOOOOO
     <br>
     <legend><strong>{{ comment[1].name }}</strong><legend>
     <em>{{ comment[1].date | date: "%B %d, %Y" }}</em>
-    <p>{{ comment[1].message | markdownify }}
+    <p>{{ comment[1].comment | markdownify }}
     <hr>
   {% endfor %}
   <p>
@@ -60,7 +60,7 @@ SOOOOO
     </div>
     <div>
       <legend>Message (<a href="https://kramdown.gettalong.org/syntax.html">Markdown</a> allowed)</legend>
-      <textarea style="width:100%" name="fields[message]" rows="12"></textarea>
+      <textarea style="width:100%" name="fields[comment]" rows="12"></textarea>
     </div> 
     <div>
       <legend><em>Comments will appear after moderation.</em></legend>
