--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -11,6 +11,7 @@ No comments?
 SOOOOO
 
  {% if site.repository and site.staticman.branch %}
+ lkl
     {% if site.data.comments[page.slug] %}
 
   <h3>
