--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -16,6 +16,12 @@ SOOOOO
 
 {% endif %}
 
+ {% if site.data.comments[page.slug] %}
+<hr>
+<h3>Someting</h3>
+
+{% endif %}
+<h5>end comments</h5>
 
 <!-- Comment form -->
 <p>
