--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -16,7 +16,7 @@ SOOOOO
 
 {% endif %}
 
- {% if site.data.comments[page.slug] %}
+ {% if site.data.comments[post.slug] %}
 <hr>
 <h3>Someting</h3>
 
