--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -10,8 +10,11 @@ No comments?
 
 SOOOOO
 
+{% if site.repository }
+repository
+{% endif }
  {% if site.staticman.branch %}
- lkl
+ staticman branch
    
 
 {% endif %}
