--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -18,7 +18,7 @@ staticman branch
 
 {{ page.slug }}
 
-{% if page.slug }
+{% if page.slug %}
 page.slug
 {% endif %}
  {% if site.data.comments[page.slug] %}
