--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -24,6 +24,8 @@ staticman branch
 page.slug
 {% endif %}
 <br>
+{{ site.data.comments.example-markdown }}
+
 {{ site.data.comments }}
 {{ site.data.comments[page.slug] }}
 
