--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -8,12 +8,11 @@
 <!-- https://github.com/eduardoboucas/popcorn/blob/gh-pages/_includes/reviews.html -->
 No comments?
 
-SOOOOO
 
-
+<br>
 
 {% if site.staticman.branch %}
-staticman branch
+staticman branch:
 {% endif %}
 {{ site.staticman.branch}}
 <br>
