--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -23,7 +23,7 @@ staticman branch:
 page.slug
 {% endif %}
 <br>
-{{ site.data.comments.example-markdown }}
+{{ site.data.comments[example-markdown] }}
 
 {{ site.data.comments }}
 {{ site.data.comments[page.slug] }}
