--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -17,11 +17,13 @@ staticman branch:
 {{ site.staticman.branch}}
 <br>
 
-{{ page.slug }}
+
 
 {% if page.slug %}
-page.slug
+page.slug:
 {% endif %}
+
+{{ page.slug }}
 <br>
 {{ site.data.comments[example-markdown] }}
 
