--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -27,6 +27,8 @@ page.slug:
 <br>
 {{ site.data.comments[example-markdown] }}
 
+{{ site.data }}
+
 {{ site.data.comments }}
 {{ site.data.comments[page.slug] }}
 
