--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -31,6 +31,8 @@ page.slug:
 
 {{ site.data.settings }}
 
+{{ site.comments.provider }}
+
 {{ site.data.comments }}
 {{ site.data.comments[page.slug] }}
 
