--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -33,6 +33,8 @@ page.slug:
 
 {{ site.comments.provider }}
 
+{{ site.comments }}
+
 {{ site.data.comments }}
 {{ site.data.comments[page.slug] }}
 
