--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -8,6 +8,7 @@
 <!-- https://github.com/eduardoboucas/popcorn/blob/gh-pages/_includes/reviews.html -->
 No comments?
 
+{{ site.repository }}
 
 <br>
 
