--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,6 +32,8 @@ layout: default
 
 <h3> Comments </h3>
 
+{{ site.data.comments }}
+
 {% include comments.html %}
 <hr>
 {% include social-sharing.html %}
