--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -85,7 +85,8 @@ STOP
      {% include comment.html index=forloop.index email=email name=name url=url date=date message=comment %}
               
       <br>
-      <legend><strong>{{ comment[1].name }}</strong></legend>
+      SOMETHING
+      <legend><strong>{{ comment.name }}</strong></legend>
       <em>{{ comment[1].date | date: "%B %d, %Y" }}</em>
       <p>{{ comment[1].comment | markdownify }}</p>
       <hr>
