--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -26,16 +26,17 @@ page.slug:
 
 {{ page.slug }}
 <br>
-{{ site.data.comments[example-markdown] }}
 
+SITE_DATA
 {{ site.data }}
-
+SITE_DATA_SETTINGS
 {{ site.data.settings }}
 STOP
 {{ site.comments.provider }}
-
+SITE_COMMENTS
 {{ site.comments }}
 STOP
+SITE_DATA_COMMENTS
 {{ site.data.comments }}
 {{ site.data.comments[page.slug] }}
 
