--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -35,6 +35,8 @@ STOP
 {{ site.comments.provider }}
 SITE_COMMENTS
 {{ site.comments }}
+{{ site.comments[page.slug].size }}
+{{ site.comments.comments }}
 STOP
 SITE_DATA_COMMENTS
 {{ site.data.comments }}
