--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -29,7 +29,7 @@ page.slug:
 
 SITE_DATA
 
-{{ site.documents }} 
+{{ site.documents.comments }} 
 {{ site.data }}
 SITE_DATA_SETTINGS
 {{ site.data.settings }}
