--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -29,19 +29,11 @@ page.slug:
 
 
 SITE_DATA_COMMENTS
-{{ site.data.comments }}
-{{ site.data.comments[page.slug] }}
 
-{{ site.data.comments[page.slug].size }}
 <br>
- {% if site.data.comments[page.slug] %}
+ 
 
 
-
-<hr>
-<h3>Someting</h3>
-
-{% endif %}
 <h5>end comments</h5>
 
 
@@ -50,20 +42,12 @@ SITE_DATA_COMMENTS
 
 {% if site.data.comments[page.slug] %}
 
-  <p>
-    <h3>
-    {% if site.data.comments[page.slug].size > 1 %}
-      {{ site.data.comments[page.slug] | size }}
-    {% endif %}
-    Comments:
-    </h3>
-  </p>
-
+ 
   <hr>
 
   
 
-  {% assign comments = site.data.comments[page.slug] | sort: 'date' %}
+  {% assign comments = site.data.comments[page.slug] | sort %}
 
 
 
@@ -77,7 +61,7 @@ SITE_DATA_COMMENTS
               
       <br>
       SOMETHING
-      <legend><strong>{{ comment.name }}</strong></legend>
+      <legend><strong>{{ comment[1].name }}</strong></legend>
       <em>{{ comment[1].date | date: "%B %d, %Y" }}</em>
       <p>{{ comment[1].comment | markdownify }}</p>
       <hr>
