--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -43,7 +43,7 @@ h1 a {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Quattrocento Sans", sans-serif;
+  font-family: "Open Sans", sans-serif;
   color: #333;
 }
 
