--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,7 +18,7 @@
 */
 
 body {
-  font-family: "Old Standard TT", "PT Serif", Georgia, "Times New Roman", serif;
+  font-family: "Lato", "Old Standard TT", "PT Serif", Georgia, serif;
   font-size: 18px;
   color: #515151;
   line-height: 1.75rem;
