--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,8 +18,8 @@
 */
 
 body {
-  font-family: "Montserrat", sans-serif;
-  font-size: 18px;
+  font-family: "Source Sans", sans-serif;
+  font-size: 1rem; /*18px;*/
   color: #515151;
   line-height: 1.75rem;
 }
