--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,7 +19,7 @@
 
 body {
   font-family: "Source Sans", sans-serif;
-  font-size: 1rem; /*18px;*/
+  /*font-size: 18px;*/
   color: #515151;
   line-height: 1.75rem;
 }
