--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,7 +26,7 @@ body {
 
 @media (max-width: 30em) {
   body {
-    font-size: 16px;
+    font-size: 1rem; /*16px;*/
     line-height: 1.5rem;
   }
   body h1 {
