--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,6 +32,6 @@
   {% include google-analytics.html %}
 
   <!-- Use Jekyll SEO plugin -->
-  {% seo_bun.html %}
+  {% include seo_bun.html %}
 
 </head>
