--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,6 +24,28 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quattrocento+Sans">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<!-- SANS -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Niramit">
+
+<!-- SERIF -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Serif">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Serif+Pro">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cormorant">
+
+<!-- SERIF Titluri -->
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Old+Standard+TT">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cormorant+SC">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=EB+Garamond">
+
+
+
+
   <script type="text/javascript" async
     src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML">
   </script>
@@ -31,7 +53,10 @@
   <!-- Google Analytics -->
   {% include google-analytics.html %}
 
-  <!-- Use Jekyll SEO plugin -->
-  {% include seo_bun.html %}
+  
+  {% include seo.html %}
 
 </head>
+
+  <!-- Use Jekyll SEO plugin -->
+  
