--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,7 +18,7 @@
 */
 
 body {
-  font-family: "Source Sans", sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 18px;
   color: #515151;
   line-height: 1.75rem;
@@ -43,7 +43,7 @@ h1 a {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Cormorant SC", sans-serif;
   color: #333;
 }
 
