--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -104,6 +104,9 @@ hr {
   font-family: "Cormorant SC";
 }
 
+.masthead h3 {
+  font-family: "Cormorant SC"
+}
 .masthead a:hover {
   color:black;
 }
