--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,7 +18,7 @@
 */
 
 body {
-  font-family: "Lora", sans-serif;
+  font-family: "Noto Serif", sans-serif;
   font-size: 18px;
   color: #515151;
   line-height: 1.75rem;
