--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -105,7 +105,7 @@ hr {
 }
 
 .masthead h3 {
-  font-family: "Cormorant SC"
+  font-family: "Playfair Display";
 }
 .masthead a:hover {
   color:black;
