--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -43,7 +43,7 @@ h1 a {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Playfair Display";
+  font-family: "EB Garamond";
   color: #333;
 }
 
@@ -105,7 +105,7 @@ hr {
 }
 
 .masthead h3 {
-  font-family: "Playfair Display";
+  font-family: "EB Garamond";
 }
 .masthead a:hover {
   color:black;
