--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,6 +44,13 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=EB+Garamond">
 
 
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=K2D">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fahkwang">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cardo"> 
+
+
 
 
   <script type="text/javascript" async
